--- a/style.css
+++ b/style.css
@@ -1,77 +1,101 @@
-body, html {
-   margin: 0;
-   padding: 0;
-   font-family: 'Open Sans', Sans-Serif;
-   color: #FFF;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: monospace;
+  font-size: 12px;
+  text-align: justify;
+  letter-spacing: 1px;
 }
 
 body {
-  background: url("./images/image.jpg") no-repeat center fixed;
-  background-size: cover;
+  width: 100%;
+  background: #f6f6f6;
 }
 
-main {
-   opacity: 0;
-   filter: blur(10px);
-   transition: opacity 2s ease-in-out, filter 2s ease-in-out;
+.image {
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 140px;
 }
 
-header {
-   margin-top: 1em;
-   text-align: center;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
+img {
+  width: 220px;
+  height: 220px;
+  border-radius: 100%;
+  margin: 50px 0 50px 0;
+	border: 5px solid #DDD;
+	border-radius: 50%;
 }
 
-header > img {
-   width: 7em;
-   height: 7em;
-   border-radius: 100%;
-   border: 1px solid #FFF;
-   box-shadow: rgb(28 32 93 / 24%) 0px 2px 8px 0px;
+.description {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
 }
 
-header > h1 {
-   display: inline-block;
-   font-size: 0.8em;
-   font-weight: bold;
-   border-radius: 1em;
-   background-color: #000a;
-   color: #FFF;
-   padding: 0.3em 0.6em;
-   border: 1px solid #FFFa;
-   backdrop-filter: blur(10px) saturate(160%) contrast(180%);
-   -webkit-backdrop-filter: blur(10px) saturate(160%) contrast(180%);
+p {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 400;
+  color: #444;
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  max-width: 400px;
 }
 
-ul {
-   box-sizing: border-box;
-   list-style: none;
-   margin: 0 auto;
-   padding: 2em;
-   max-width: 480px;
+ a {
+  font-size: 20px;
+  font-weight: 400;
+  color: #444;
+  text-decoration: none;
 }
 
-ul > li {
-   background-color: #FFFa;
-   backdrop-filter: blur(10px) saturate(160%) contrast(180%);
-   -webkit-backdrop-filter: blur(10px) saturate(160%) contrast(180%);
-   border-radius: 10em;
-   padding: 1em;
-   margin: 1.4em 0;
-   box-shadow: rgb(28 32 93 / 24%) 0px 2px 8px 0px;
+span {
+  text-decoration: underline;
+  font-size: 20px;
+  font-weight: 400;
+  color: #444;
 }
 
-ul > li  > a {
-   display: flex;
-   flex-direction: row;
-   justify-content: center;
-   align-items: center;
-   gap: 0.5em;
+h4 {
+  margin-top: -30px;
+  font-weight: 700;
+  color: #222;
+  font-size: 28px;
 }
 
-a {
-   color: #000;
-   text-decoration: none;
+.link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  margin-top: 25px;
+}
+
+i {
+  font-size: 35px;
+}
+
+i:hover {
+  border-radius: 100%;
+  color: #f6f6f6;
+  background: #222;
+  padding: 8px;
+  transition: 1s all;
+}
+
+footer,
+h6 {
+  width: 100%;
+  text-align: center;
+  font-size: 15px;
+  font-weight: 400;
+  margin-top: 45px;
 }
