--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@
   font-family: monospace;
   font-size: 10px;
   text-align: justify;
-  letter-spacing: -1px;
+  letter-spacing: 1px;
 }
 
 body {
   width: 100%;
-  background: #000;
+  background: #f6f6f6;
 }
 
 .image {
@@ -18,7 +18,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 40px;
+  margin-top: 60px;
 }
 
 img {
@@ -26,7 +26,7 @@ img {
   height: 220px;
   border-radius: 100%;
   margin: 50px 0 50px 0;
-  border: 5px solid #27272a;
+  border: 5px solid #ddd;
   border-radius: 50%;
 }
 
@@ -41,7 +41,7 @@ p {
   text-align: center;
   font-size: 16px;
   font-weight: 400;
-  color: #d4d4d8;
+  color: #444;
   margin-top: 30px;
   display: flex;
   align-items: center;
@@ -67,7 +67,7 @@ span {
 h4 {
   margin-top: -30px;
   font-weight: 700;
-  color: #e4e4e7;
+  color: #222;
   font-size: 28px;
 }
 
@@ -92,9 +92,8 @@ i {
 
 i:hover {
   border-radius: 100%;
-  color: #e4e4e7;
-  background: #444;
+  color: #f6f6f6;
+  background: #222;
   padding: 8px;
-  transition: 0.8s all
-  color: #e4e4e7;
+  transition: 1s all;
 }
