--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 body {
   width: 100%;
-  background: #f6f6f6;
+  background: #09090b;
 }
 
 .image {
@@ -25,8 +25,12 @@ img {
   height: 220px;
   border-radius: 100%;
   margin: 50px 0 50px 0;
-  border: 5px solid #ddd;
+  border: 5px solid #27272a;
   border-radius: 50%;
+}
+
+img:hover {
+  opacity: 90%;
 }
 
 .description {
@@ -40,7 +44,7 @@ p {
   text-align: center;
   font-size: 14px;
   font-weight: 400;
-  color: #333;
+  color: #F7F7F7;
   margin-top: 30px;
   display: flex;
   align-items: center;
@@ -56,7 +60,7 @@ p > span {
 a {
   font-size: 18px;
   font-weight: 400;
-  color: #444;
+  color: #F7F7F7;
   text-decoration: none;
 }
 
@@ -64,14 +68,17 @@ span {
   text-decoration: underline;
   font-size: 18px;
   font-weight: 400;
-  color: #444;
+  color: #F7F7F7;
 }
 
 h4 {
   margin-top: -30px;
-  font-weight: 700;
-  color: #222;
+  font-weight: 800;
   font-size: 28px;
+  background: linear-gradient(to right, #22c55e,
+  #3b82f6);
+    -webkit-background-clip: text;
+  color: transparent;
 }
 
 .link {
@@ -86,17 +93,21 @@ h4 {
   flex: 1;
   max-width: 80%;
   font-size: 14px;
-  color: #777;
+  color: #666;
   margin-bottom: 25px;
   font-style: italic;
 }
 
 i {
   font-size: 20px;
+  opacity: 75%;
   padding-bottom: 30px;
 }
 
 a:hover {
-  opacity: 80%;
-  transition: 1s all;
+  background-color: transparent;
+  border: 1px solid #EEE;
+  border-radius: 50%;
+  padding: 3px;
+  transition: .2s all;
 }
